--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lucide-react": "^0.276.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^7.6.0",
         "tailwind-variants": "^0.1.1"
     },
     "devDependencies": {
